se agrega nueva classmethod para conferencias de un usuario y se ajustan vistas

--- a/static/style.css
+++ b/static/style.css
@@ -339,3 +339,11 @@ a.btn.btn-logout:hover {
   background-color: #fff;
   border: 1px solid red;
 }
+#qr-code {
+  display: none;
+}
+.btns-view-congress {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
