--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,7 +24,7 @@
           />
         </a>
         <a href="/congress/">Conferencias</a>
-        <a href="/create/">Crear Conferencia</a>
+        <a href="/my-congress/">Mis Conferencias</a>
       </div>
       <a class="nav-profile" href="/profile/">
         <p>{{session['nombre']}}</p>
