--- a/templates/mis-conferencias.html
+++ b/templates/mis-conferencias.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mis Conferencias</title>
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- Estilos propios -->
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
   </head>
 
@@ -23,19 +25,39 @@
           />
         </a>
         <a href="/congress/">Conferencias</a>
-        <a href="/create/">Crear Conferencia</a>
+        <a href="/my-congress/">Mis Conferencias</a>
       </div>
+      <a class="nav-profile" href="/profile/">
+        <p>{{session['nombre']}}</p>
+        {% if session['imagenPerfil'] %}
+        <img
+          src="{{url_for('uploads', filename=session['imagenPerfil'])}}"
+          alt="imagen perfil"
+          class="profile-img"
+        />
+        {% else %}
+        <img
+          src="{{url_for('static', filename='usuario-de-perfil.png')}}"
+          alt="icono imagen"
+          class="profile-img"
+        />
+        {% endif %}
+      </a>
     </nav>
 
     <div class="container mb-3">
       <h2>Mis Conferencias</h2>
       <div class="row mb-3">
-        {% for conferencia in conferencias %} {% if conferencia.usuario.id ==
+        {% for conferencia in conferencias %} {% if conferencia.usuario ==
         session["id"] %}
         <div class="col-lg-3">
           <div class="conference-card">
             {% if conferencia.imagen %}
-            <img src="{{conferencia.imagen}}" alt="imagen conferencia" />
+            <img
+              src="{{url_for('uploads', filename=conferencia.imagen)}}"
+              alt="imagen conferencia"
+              class="img-congress"
+            />
             {% else %}
             <img
               src="{{url_for('static', filename='photo.png')}}"
@@ -44,14 +66,16 @@
             {% endif %}
             <h3>{{conferencia.nombre}}</h3>
             <div class="mb-3">
-              <a href="" class="btn">Ver Conferencia</a>
+              <a href="/congress/{{conferencia.idConferencias}}" class="btn"
+                >Ver Conferencia</a
+              >
             </div>
           </div>
-          {% endif %} {% endfor %}
         </div>
-        <div class="ver-mas-container">
-          <a href="" class="btn btn2">Ver más</a>
-        </div>
+        {% endif %} {% endfor %}
+      </div>
+      <div class="ver-mas-container">
+        <a href="" class="btn btn2">Ver más</a>
       </div>
     </div>
   </body>
