Se crea vista edit conferencias || se crea boton crear conferencias || se ajustan despliegues y estilos

--- a/templates/congress.html
+++ b/templates/congress.html
@@ -59,6 +59,7 @@
             <img
               src="{{url_for('static', filename='photo.png')}}"
               alt="icono imagen"
+              class="img-congress"
             />
             {% endif %}
             <h3>{{conferencia.nombre}}</h3>
@@ -71,14 +72,23 @@
         </div>
         {% endfor %}
       </div>
+      {% if cantidad and cantidad == 5 %}
       <div class="ver-mas-container">
-        <a href="" class="btn btn2">Ver más</a>
+        <a href="/congress/all" class="btn btn2">Ver más</a>
       </div>
+      {% endif %}
     </div>
     {% else %}
     <div class="container">
       <h2>No existen conferencias aún</h2>
     </div>
     {% endif %}
+    <a href="/create/" class="add-congress">
+      <img
+        class="add-create-icon add d-inline-block"
+        src="{{url_for('static', filename='plus.png')}}"
+        alt="plus icon"
+      />
+    </a>
   </body>
 </html>
