--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,24 @@ ul {
   padding: 0;
 }
 
+.add-congress {
+  position: fixed;
+  bottom: 3rem;
+  right: 3rem;
+}
+.add-create-icon {
+  width: auto;
+  height: 60px;
+  cursor: pointer;
+  transition: 0.1s ease-in-out;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 1px solid #fff;
+}
+.add-create-icon:hover {
+  transform: scale(1.05);
+}
+
 /* Login y Register */
 .login-container {
   display: flex;
@@ -167,6 +185,7 @@ nav .nav-links:first-child img {
   justify-content: center;
   border-radius: 10px;
   min-height: 335px;
+  margin-bottom: 2rem;
 }
 .conference-card img {
   width: auto;
@@ -296,7 +315,19 @@ button.btn.btn-submit:hover {
   margin-right: 1rem;
   float: left;
 }
-
+.speaker-container {
+  min-height: 200px;
+  margin-bottom: 2rem;
+}
+.content-row {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  justify-content: center;
+}
+.content-row a {
+  text-decoration: none;
+}
 .info-field {
   display: flex;
   font-size: 20px;
@@ -346,4 +377,22 @@ a.btn.btn-logout:hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+/* Edit Congress */
+.img-congress-edit {
+  height: auto;
+  width: auto;
+  max-height: 100px;
+  display: flex;
+  margin: 1rem auto 2rem 0;
+  display: block;
+}
+a:has(.file-icon-edit:first-child) {
+  width: fit-content;
+}
+.file-icon-edit {
+  width: auto;
+  height: 100%;
+  max-height: 100px;
+  display: block;
 }
