--- a/templates/login.html
+++ b/templates/login.html
@@ -25,13 +25,13 @@
           {% endfor %}
         </ul>
         <div class="mb-3">
-          <label class="form-label" for="email_login">Email</label>
+          <label class="form-label" for="email_login">Correo</label>
           <input
             class="form-control"
             type="email"
             id="email_login"
             name="email"
-            placeholder="Ingrese su email"
+            placeholder="Ingrese su correo"
           />
         </div>
         <div class="mb-3">
