--- a/templates/all-congress.html
+++ b/templates/all-congress.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mis Conferencias</title>
+    <title>Congressy</title>
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -11,10 +11,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <!-- Estilos propios -->
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
   </head>
-
   <body>
     <nav>
       <div class="nav-links">
@@ -46,10 +44,9 @@
     </nav>
     {% if conferencias %}
     <div class="container mb-3">
-      <h2>Mis Conferencias</h2>
+      <h2>Próximas Conferencias</h2>
       <div class="row mb-3">
-        {% for conferencia in conferencias %} {% if conferencia.usuario ==
-        session["id"] %}
+        {% for conferencia in conferencias %}
         <div class="col-lg-3">
           <div class="conference-card">
             {% if conferencia.imagen %}
@@ -73,60 +70,17 @@
             </div>
           </div>
         </div>
-        {% endif %} {% endfor %}
+        {% endfor %}
       </div>
       {% if cantidad and cantidad == 5 %}
       <div class="ver-mas-container">
-        <a href="/my-congress/all" class="btn btn2">Ver más</a>
+        <a href="/congress/all" class="btn btn2">Ver más</a>
       </div>
       {% endif %}
     </div>
     {% else %}
     <div class="container">
-      <h2>Mis Próximas Conferencias</h2>
-      <p class="no-data-medal">No existen conferencias próximas aún</p>
-    </div>
-    {% endif %} {% if past_conferencias %}
-    <div class="container mb-3">
-      <h2>Mis Conferencias Pasadas</h2>
-      <div class="row mb-3">
-        {% for conferencia in past_conferencias %} {% if conferencia.usuario ==
-        session["id"] %}
-        <div class="col-lg-3">
-          <div class="conference-card">
-            {% if conferencia.imagen %}
-            <img
-              src="{{url_for('uploads', filename=conferencia.imagen)}}"
-              alt="imagen conferencia"
-              class="img-congress"
-            />
-            {% else %}
-            <img
-              src="{{url_for('static', filename='photo.png')}}"
-              alt="icono imagen"
-              class="img-congress"
-            />
-            {% endif %}
-            <h3>{{conferencia.nombre}}</h3>
-            <div class="mb-3">
-              <a href="/congress/{{conferencia.idConferencias}}" class="btn"
-                >Ver Conferencia</a
-              >
-            </div>
-          </div>
-        </div>
-        {% endif %} {% endfor %}
-      </div>
-      {% if past_cantidad and past_cantidad == 5 %}
-      <div class="ver-mas-container">
-        <a href="/past-my-congress/all" class="btn btn2">Ver más</a>
-      </div>
-      {% endif %}
-    </div>
-    {% else %}
-    <div class="container">
-      <h2>Mis Conferencias Pasadas</h2>
-      <p class="no-data-medal">No existen propias conferencias pasadas aún</p>
+      <h2>No existen conferencias aún</h2>
     </div>
     {% endif %}
     <a href="/create/" class="add-congress">
