--- a/templates/all-mis-conferencias.html
+++ b/templates/all-mis-conferencias.html
@@ -83,50 +83,8 @@
     </div>
     {% else %}
     <div class="container">
-      <h2>Mis Próximas Conferencias</h2>
-      <p class="no-data-medal">No existen conferencias próximas aún</p>
-    </div>
-    {% endif %} {% if past_conferencias %}
-    <div class="container mb-3">
-      <h2>Mis Conferencias Pasadas</h2>
-      <div class="row mb-3">
-        {% for conferencia in past_conferencias %} {% if conferencia.usuario ==
-        session["id"] %}
-        <div class="col-lg-3">
-          <div class="conference-card">
-            {% if conferencia.imagen %}
-            <img
-              src="{{url_for('uploads', filename=conferencia.imagen)}}"
-              alt="imagen conferencia"
-              class="img-congress"
-            />
-            {% else %}
-            <img
-              src="{{url_for('static', filename='photo.png')}}"
-              alt="icono imagen"
-              class="img-congress"
-            />
-            {% endif %}
-            <h3>{{conferencia.nombre}}</h3>
-            <div class="mb-3">
-              <a href="/congress/{{conferencia.idConferencias}}" class="btn"
-                >Ver Conferencia</a
-              >
-            </div>
-          </div>
-        </div>
-        {% endif %} {% endfor %}
-      </div>
-      {% if past_cantidad and past_cantidad == 5 %}
-      <div class="ver-mas-container">
-        <a href="/past-my-congress/all" class="btn btn2">Ver más</a>
-      </div>
-      {% endif %}
-    </div>
-    {% else %}
-    <div class="container">
-      <h2>Mis Conferencias Pasadas</h2>
-      <p class="no-data-medal">No existen propias conferencias pasadas aún</p>
+      <h2>Mis Conferencias</h2>
+      <h3>No existen conferencias propias aún</h3>
     </div>
     {% endif %}
     <a href="/create/" class="add-congress">
