--- a/templates/create_congress.html
+++ b/templates/create_congress.html
@@ -101,7 +101,7 @@
           </div>
           <div class="mb-3 col-lg-4">
             <label class="form-label" for="linkUbicacion"
-              >Link Ubicacion (*)</label
+              >Link Ubicación (*)</label
             >
             <input
               class="form-control"
@@ -161,12 +161,12 @@
               />
             </div>
             <div class="mb-3 col-lg-4">
-              <label class="form-label" for="email">Email Speaker</label>
+              <label class="form-label" for="email">Correo Speaker</label>
               <input
                 class="form-control"
                 type="text"
                 name="emailSpeaker1"
-                placeholder="Ingrese el email del Speaker"
+                placeholder="Ingrese el correo del Speaker"
               />
             </div>
             <div class="mb-3 col-lg-4">
