--- a/templates/profile.html
+++ b/templates/profile.html
@@ -94,12 +94,12 @@
             />
           </div>
           <div class="mb-3 col-lg-6">
-            <label class="form-label" for="email">Email</label>
+            <label class="form-label" for="email">Correo</label>
             <input
               class="form-control"
               type="email"
               name="email"
-              placeholder="Ingrese el email del perfil"
+              placeholder="Ingrese el correo del perfil"
               value="{{usuario.email}}"
             />
           </div>
