--- a/templates/register.html
+++ b/templates/register.html
@@ -35,13 +35,13 @@
           />
         </div>
         <div class="mb-3">
-          <label class="form-label" for="email_login">Email</label>
+          <label class="form-label" for="email_login">Correo</label>
           <input
             class="form-control"
             type="email"
             id="email"
             name="email"
-            placeholder="Ingrese su email"
+            placeholder="Ingrese su correo"
           />
         </div>
         <div class="mb-3">
